gcc-14.2.0/gcc/testsuite/gdc.test/compilable/test23966.d
version https://git-lfs.github.com/spec/v1
oid sha256:e2762dbf19ae26919dca3977ae78966386d263c10574571feb81c7b8de72dc5a
size 345
